Changed license info.
Added .bowerrc file and changed license info.

--- a/file-reader.html
+++ b/file-reader.html
@@ -1,6 +1,7 @@
+<link rel="import" href="../polymer/polymer.html">
 <!--
 @license
-Copyright 2012 Pawel Psztyc
+Copyright 2016 Pawel Psztyc, The ARC team
 
 Licensed under the Apache License, Version 2.0 (the "License"); you may not
 use this file except in compliance with the License. You may obtain a copy of
@@ -15,13 +16,11 @@ License for the specific language governing permissions and limitations under
 the License.
 -->
 
-
-
 <!--
 `file-reader` is an element for read files in a web browser.
 The file can be any sub-class of Blob class. That mean it can read Blobs, File objects etc.
 
-The `file reader` element don't have it's own UI. It's only a helper element to us in your 
+The `file reader` element don't have it's own UI. It's only a helper element to us in your
 app's logic.
 
 
