--- a/test/basic.html
+++ b/test/basic.html
@@ -18,68 +18,69 @@ the License.
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>file-reader tests</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <script src="../bower_components/webcomponentsjs/webcomponents.min.js"></script>
-    <script src="../bower_components/web-component-tester/browser.js"></script>
-    <link rel="import" href="../file-reader.html">
+  <meta charset="UTF-8">
+  <title>file-reader tests</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <script src="../bower_components/webcomponentsjs/webcomponents.min.js"></script>
+  <script src="../bower_components/web-component-tester/browser.js"></script>
+  <link rel="import" href="../file-reader.html">
 </head>
 
 <body>
-    <test-fixture id="basic">
-        <template>
-            <file-reader></file-reader>
-        </template>
-    </test-fixture>
-    <script>
-    suite('basic', function() {
-        test('file-reader reads the file', function(done) {
-            var f = fixture('basic');
-            var reader = f.querySelector('file-reader');
-            var debug = JSON.stringify({
-                hello: "world"
-            }, null, 2);
-            var blob = new Blob([debug], {
-                type: 'application/json'
-            });
-            reader.blob = blob;
-            reader.readAs = 'text';
-            reader.addEventListener('file-read', function(e) {
-                var result = e.detail.result;
-                expect(result).to.be.a('string');
-                expect(foo).to.equal(debug);
-                done();
-            });
-            reader.addEventListener('file-error', function(e) {
-              should.not.exist(e);
-            });
-            reader.read();
-        });
-        test('file-reader reads the file automatically', function(done) {
-            var f = fixture('basic');
-            var reader = f.querySelector('file-reader');
-            var debug = JSON.stringify({
-                hello: "world"
-            }, null, 2);
-            var blob = new Blob([debug], {
-                type: 'application/json'
-            });
-            reader.blob = blob;
-            reader.readAs = 'text';
-            reader.addEventListener('file-read', function(e) {
-                var result = e.detail.result;
-                expect(result).to.be.a('string');
-                expect(foo).to.equal(debug);
-                done();
-            });
-            reader.addEventListener('file-error', function(e) {
-              should.not.exist(e);
-            });
-            reader.auto = true;
-        });
+  <test-fixture id="basic">
+    <template>
+      <file-reader></file-reader>
+    </template>
+  </test-fixture>
+  <script>
+  /* global fixture, expect, should */
+  suite('basic', function() {
+    var reader;
+    setup(function() {
+      reader = fixture('basic');
     });
-    </script>
+    test('file-reader reads the file', function(done) {
+      var debug = JSON.stringify({
+        hello: 'world'
+      }, null, 2);
+      var blob = new Blob([debug], {
+        type: 'application/json'
+      });
+      reader.blob = blob;
+      reader.readAs = 'text';
+      reader.addEventListener('file-read', function(e) {
+        var result = e.detail.result;
+        expect(result).to.be.a('string');
+        expect(result).to.equal(debug);
+        done();
+      });
+      reader.addEventListener('file-error', function(e) {
+        should.not.exist(e);
+      });
+      reader.read();
+    });
+    test('file-reader reads the file automatically', function(done) {
+      var debug = JSON.stringify({
+        hello: 'world'
+      }, null, 2);
+      var blob = new Blob([debug], {
+        type: 'application/json'
+      });
+      reader.blob = blob;
+      reader.readAs = 'text';
+      reader.addEventListener('file-read', function(e) {
+        var result = e.detail.result;
+        expect(result).to.be.a('string');
+        expect(result).to.equal(debug);
+        done();
+      });
+      reader.addEventListener('file-error', function(e) {
+        should.not.exist(e);
+      });
+      reader.auto = true;
+    });
+  });
+  </script>
 </body>
 
 </html>
