--- a/test/file-reader-test.html
+++ b/test/file-reader-test.html
@@ -4,9 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
   <title>file-reader test</title>
-  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-  <script src="../../web-component-tester/browser.js"></script>
-  <link rel="import" href="../file-reader.html">
+
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../node_modules/@polymer/test-fixture/test-fixture.js"></script>
+  <script src="../node_modules/mocha/mocha.js"></script>
+  <script src="../node_modules/chai/chai.js"></script>
+  <script src="../node_modules/wct-mocha/wct-mocha.js"></script>
+  
 </head>
 <body>
   <test-fixture id="Text">
@@ -33,9 +37,9 @@
     </template>
   </test-fixture>
 
-  <script>
+  <script type="module">
+  import '../file-reader.js';
   suite('file-reader', () => {
-
     test('Reads text file', (done) => {
       const element = fixture('Text');
       const debug = JSON.stringify({
